--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-$primary: teal;
+$primary:#1e3641;
+$link:#267abd ;
+$info: #3c5784;
+$warning: #ba8951;
+$danger:#831a1e ;
 
 @import "~bulma/bulma.sass";
